--- a/index.html
+++ b/index.html
@@ -1,10 +1,84 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
+  <meta charset="UTF-8">
   <title>Karthik | Data Engineer</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <h1>Hello 👋 I'm Karthik</h1>
-  <p>This is my personal website.</p>
+
+<div class="container">
+
+  <!-- HERO -->
+  <section class="hero">
+    <h1>Hi, I'm Karthik 👋</h1>
+    <p class="subtitle">
+      AWS Data Engineer | PySpark | SQL | Airflow
+    </p>
+    <p class="desc">
+      I build scalable data pipelines, automate ETL workflows,
+      and support production systems on AWS.
+    </p>
+  </section>
+
+  <!-- ABOUT -->
+  <section>
+    <h2>About Me</h2>
+    <p>
+      I am an AWS Data Engineer with hands-on experience in batch and streaming
+      pipelines. I have worked on data ingestion, transformation, and loading
+      using PySpark, AWS Glue, S3, Lambda, Redshift, and Airflow.
+    </p>
+  </section>
+
+  <!-- SKILLS -->
+  <section>
+    <h2>Skills</h2>
+    <div class="skills">
+      <span>Python</span>
+      <span>SQL</span>
+      <span>PySpark</span>
+      <span>AWS Glue</span>
+      <span>S3</span>
+      <span>Lambda</span>
+      <span>Redshift</span>
+      <span>Airflow</span>
+    </div>
+  </section>
+
+  <!-- PROJECTS -->
+  <section>
+    <h2>Projects</h2>
+
+    <div class="card">
+      <h3>SFTP → S3 → MySQL ETL Pipeline</h3>
+      <p><strong>Problem:</strong> Manual file ingestion from SFTP.</p>
+      <p><strong>Solution:</strong> Automated ETL pipeline using Python.</p>
+      <p><strong>Tools:</strong> Python, AWS S3, SQLAlchemy, MySQL</p>
+      <p><strong>Outcome:</strong> Reliable daily ingestion with logging.</p>
+    </div>
+
+    <div class="card">
+      <h3>AWS Glue PySpark Data Pipeline</h3>
+      <p><strong>Problem:</strong> Transform large datasets efficiently.</p>
+      <p><strong>Solution:</strong> Built Glue jobs using PySpark.</p>
+      <p><strong>Tools:</strong> PySpark, Glue, S3</p>
+      <p><strong>Outcome:</strong> Optimized performance and cost.</p>
+    </div>
+
+  </section>
+
+  <!-- CONTACT -->
+  <section class="contact">
+    <h2>Contact</h2>
+    <p>Email: your-email@gmail.com</p>
+    <p>
+      <a href="#">GitHub</a> |
+      <a href="#">LinkedIn</a>
+    </p>
+  </section>
+
+</div>
+
 </body>
 </html>
