--- a/index.html
+++ b/index.html
@@ -1,20 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <title>Karthik | AWS Data Engineer</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta charset="UTF-8">
+  <title>Karthik | Data Engineer</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
 <!-- NAVBAR -->
 <header class="navbar">
-  <div class="nav-content">
-    <h2 class="logo">Karthik</h2>
+  <div class="nav-inner">
+    <span class="brand">Karthik</span>
     <nav>
       <a href="#home">Home</a>
-      <a href="#bio">Bio</a>
       <a href="#education">Education</a>
       <a href="#experience">Experience</a>
       <a href="#projects">Projects</a>
@@ -26,30 +25,18 @@
 
 <!-- HOME -->
 <section id="home" class="hero">
-  <div class="hero-inner">
-    <div class="hero-text">
-      <h1>Karthik</h1>
-      <h3>AWS Data Engineer</h3>
-      <p>
-        I build scalable data pipelines, automate ETL workflows,
-        and support production systems using AWS and big data technologies.
-      </p>
-    </div>
+  <div class="hero-content">
+    <h1>Karthik</h1>
+    <h2>AWS Data Engineer</h2>
+    <p>
+      I build scalable data pipelines, automate ETL workflows,
+      and support production systems using AWS and big data technologies.
+    </p>
   </div>
 </section>
 
-<!-- BIO -->
-<section id="bio" class="section">
-  <h2>About Me</h2>
-  <p>
-    AWS Data Engineer with hands-on experience in batch and streaming data pipelines.
-    I specialize in building reliable ETL systems, data ingestion frameworks,
-    and supporting production workloads on AWS.
-  </p>
-</section>
-
 <!-- EDUCATION -->
-<section id="education" class="section bg-dark">
+<section id="education" class="section">
   <h2>Education</h2>
   <div class="card">
     <h3>Bachelor’s Degree</h3>
@@ -65,31 +52,27 @@
     <h3>AWS Data Engineer</h3>
     <span>Company Name • Duration</span>
     <ul>
-      <li>Designed and supported ETL pipelines using PySpark and AWS Glue</li>
-      <li>Handled production incidents, monitoring, and performance tuning</li>
-      <li>Worked extensively with S3, Lambda, Redshift, and Airflow</li>
+      <li>Designed and maintained ETL pipelines using PySpark and AWS Glue</li>
+      <li>Handled production incidents and data quality issues</li>
+      <li>Worked with S3, Lambda, Redshift, and Airflow</li>
     </ul>
   </div>
 </section>
 
 <!-- PROJECTS -->
-<section id="projects" class="section bg-dark">
+<section id="projects" class="section">
   <h2>Projects</h2>
 
-  <div class="card project">
+  <div class="card">
     <h3>SFTP → S3 → MySQL ETL Pipeline</h3>
-    <p><strong>Problem:</strong> Manual SFTP file ingestion.</p>
-    <p><strong>Solution:</strong> Automated ETL pipeline using Python.</p>
     <p><strong>Tools:</strong> Python, AWS S3, SQLAlchemy, MySQL</p>
-    <p><strong>Outcome:</strong> Reliable daily ingestion with logging.</p>
+    <p>Automated ingestion of files from SFTP into MySQL with logging and retries.</p>
   </div>
 
-  <div class="card project">
+  <div class="card">
     <h3>AWS Glue PySpark Pipeline</h3>
-    <p><strong>Problem:</strong> Large-scale data transformation.</p>
-    <p><strong>Solution:</strong> PySpark-based Glue jobs.</p>
     <p><strong>Tools:</strong> PySpark, AWS Glue, S3</p>
-    <p><strong>Outcome:</strong> Improved processing time and cost efficiency.</p>
+    <p>Built scalable Spark jobs to transform large datasets efficiently.</p>
   </div>
 </section>
 
@@ -109,17 +92,17 @@
 </section>
 
 <!-- CONTACT -->
-<section id="contact" class="section bg-dark">
+<section id="contact" class="section contact">
   <h2>Contact</h2>
   <p>Email: your-email@gmail.com</p>
-  <p class="links">
-    <a href="#">GitHub</a>
+  <p>
+    <a href="#">GitHub</a> |
     <a href="#">LinkedIn</a>
   </p>
 </section>
 
 <footer class="footer">
-  © 2026 Karthik • AWS Data Engineer
+  © 2026 Karthik
 </footer>
 
 </body>
